Remove dialog-buttons specific css. Remove title from dialog, and set title in interaction. Remove blur when removing interaction, this is handled by dnb. Remove overlay visibility when creating dnb element to allow it to overflow toolbar. Make sure interaction title is not shown for newly created elements. Added outline for interactions. [HFJ-617]

--- a/styles/interactive-video-editor.css
+++ b/styles/interactive-video-editor.css
@@ -437,10 +437,6 @@
   font-size: 1.1em;
 }
 
-.h5p-interactivevideo-editor .h5p-interaction:focus {
-  outline: none;
-}
-
 /* Label for interaction buttons */
 .h5p-interactivevideo-editor .h5peditor-interactions .h5p-interaction-button-title {
   display: none;
@@ -470,6 +466,16 @@
 .h5p-interactivevideo-editor .h5p-interaction.h5p-dragnbar-element:hover > .h5p-interaction-button,
 .h5p-interactivevideo-editor .h5p-interaction.h5p-dragnbar-element.focused > .h5p-interaction-button {
   outline: 1px solid #0099ff;
+}
+
+.h5p-interactivevideo-editor .h5p-interactive-video .h5p-interaction.focused,
+.h5p-interactivevideo-editor .h5p-interactive-video .h5p-interaction:hover {
+  outline: 1px solid #0099ff;
+}
+
+.h5p-interactivevideo-editor .h5p-interactive-video .h5p-interaction.h5p-poster {
+  overflow: visible;
+  overflow-y: visible;
 }
 
 /* interaction semantics wrapper */
